[project]
name = "nish_history"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "NishNovae", email = "raecrowned@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
nh = "nish_history.cli:query"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.1",
    "pytest-cov>=5.0.0",
]
