[project]
name = "nish_history"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "NishNovae", email = "raecrowned@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
nish-history = "nish_history.cli:query"

[tool.pdm]
distribution = false


[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.1",
    "pytest-cov>=5.0.0",
]

[tool.pdm.scripts]
ctest = "pytest --cov"
stest = "pytest -s"
test = "pytest"
venvoff = "deactivate"

[tool.pytest.ini_options]
pythonpath = [ "src/" ]

[project.urls]
Homepage="https://github.com/NishNovae/my_history/tree/0.1.0/simple"
Issues="https://github.com/NishNovae/my_history/issues"
